fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ h2 {
 .input-flex {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 #list-item {
   border: 0.1rem rgb(183, 114, 185) solid;
